# qt_mpd_client_demo

./: .clang-format  .gitignore  CMakeLists.txt  README.md  abstractmpdsettings.h  connectionmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mockmpdsettings.cpp  mockmpdsettings.h  mpdconnection.cpp  mpdconnection.h  mpdconnectionfactory.cpp  mpdconnector.cpp  mpdconnector.h  mpdsettings.cpp  mpdsettings.h  qt_mpd_client_demo.pro  tst_testcontroller.cpp
Controller/: CMakeLists.txt  Controller.pro  connectionmanager.cpp  connectionmanager.h  controller.cpp  controller.h  mpdconnection.cpp  mpdconnection.h  mpdconnectionfactory.cpp  mpdconnectionfactory.h  mpdsignalcarrier.cpp  mpdsignalcarrier.h
app/: CMakeLists.txt  mainwindow.h
src/: CMakeLists.txt  abstractmpdconnection.cpp  abstractmpdconnection.h  abstractmpdsettings.cpp  connectionmanager.cpp  connectionmanager.h  connectionstate.h  controller.cpp  controller.h  main.cpp  mainwindow.cpp  mpdconnection.cpp  mpdconnection.h  mpdconnectionfactory.cpp  mpdconnectionfactory.h  src.pro
tests/: CMakeLists.txt  mpdprocess.cpp  mpdprocess.h  tests.pro  tst_testconnection.cpp  tst_testcontroller.cpp
tests/resources/: mpd.conf
